# yz-iris

./: .gitattributes  .gitignore  README.md  manifest.json  plan.md  pyproject.toml
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/scripts/: copy-mp-assets.mjs  install-to-frontend.mjs  ship.extra.mjs
ui/src/: App.tsx  IrisPage.tsx  index.ts  types.ts
ui/src/components/: BrowserMPCard.tsx  BrowserSourceCard.tsx  CameraSelector.tsx  PowerStrip.tsx  PresenceWidget.tsx  SceneTools.tsx  SourceSelector.tsx  StatusStrip.tsx  YoloeSetupCard.tsx  mpDraw.ts  mpGaze.ts  mpModels.ts
ui/src/lib/: api.ts  useYoloe.ts  ws.ts
yz_iris/: __main__.py  camera.py  mediapipe_layer.py  objects.py  reducer.py  server.py
yz_iris/sources/: __init__.py  base.py  browser_source.py  python_source.py  registry.py
yz_iris/static/: index.html
yz_iris/static/assets/: index-BD7CTjnF.js  index-CPseX7m7.js  index-CRyMEa8i.js  index-DLlvkC0E.js
